# flac2mp3

./: .gitignore  Cargo.toml  README.md
.github/workflows/: draft.yml
scripts/: build.sh
src/: encoder.rs  main.rs
