[package]
name = "flac2mp3"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[dependencies]
mp3lame-encoder = "0.2.1"
rayon = "1.10.0"
symphonia = "0.5.4"
